# serializer version: 1
# name: test_generated_yaml_matches_snapshot[four_displays]
  '''
  # Generated by the Analog Displays integration for Home Assistant.
  #
  # This firmware exposes generic entities only. Which sensor feeds which meter,
  # how it is calibrated, and what the buttons do all live in Home Assistant and
  # can be changed there without reflashing.
  
  esphome:
    name: meter-panel
    friendly_name: Meter Panel
  
  esp32:
    board: esp32dev
    framework:
      type: esp-idf
  
  logger:
  
  api:
    encryption:
      key: !secret analog_displays_api_key
  
  ota:
    - platform: esphome
      password: !secret analog_displays_ota_password
  
  wifi:
    ssid: !secret wifi_ssid
    password: !secret wifi_password
    ap:
      ssid: "Meter Panel Fallback"
  
  captive_portal:
  
  output:
    - platform: ledc
      id: out_display_1
      pin: GPIO25
      frequency: 1000Hz
    - platform: ledc
      id: out_display_2
      pin: GPIO26
      frequency: 1000Hz
    - platform: ledc
      id: out_display_3
      pin: GPIO27
      frequency: 1000Hz
    - platform: ledc
      id: out_display_4
      pin: GPIO14
      frequency: 1000Hz
  
  number:
    - platform: template
      name: "Display 1"
      id: display_1
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_1
            level: !lambda return x;
    - platform: template
      name: "Display 2"
      id: display_2
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_2
            level: !lambda return x;
    - platform: template
      name: "Display 3"
      id: display_3
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_3
            level: !lambda return x;
    - platform: template
      name: "Display 4"
      id: display_4
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_4
            level: !lambda return x;
  
  '''
# ---
# name: test_generated_yaml_matches_snapshot[mixed_led_types]
  '''
  # Generated by the Analog Displays integration for Home Assistant.
  #
  # This firmware exposes generic entities only. Which sensor feeds which meter,
  # how it is calibrated, and what the buttons do all live in Home Assistant and
  # can be changed there without reflashing.
  
  esphome:
    name: meter-panel
    friendly_name: Meter Panel
  
  esp32:
    board: esp32dev
    framework:
      type: esp-idf
  
  logger:
  
  api:
    encryption:
      key: !secret analog_displays_api_key
  
  ota:
    - platform: esphome
      password: !secret analog_displays_ota_password
  
  wifi:
    ssid: !secret wifi_ssid
    password: !secret wifi_password
    ap:
      ssid: "Meter Panel Fallback"
  
  captive_portal:
  
  output:
    - platform: ledc
      id: out_display_1
      pin: GPIO25
      frequency: 1000Hz
    - platform: ledc
      id: out_display_2
      pin: GPIO26
      frequency: 1000Hz
    - platform: ledc
      id: out_display_3
      pin: GPIO27
      frequency: 1000Hz
    - platform: ledc
      id: out_display_4
      pin: GPIO14
      frequency: 1000Hz
    - platform: ledc
      id: out_display_4_red
      pin: GPIO16
    - platform: ledc
      id: out_display_4_green
      pin: GPIO17
    - platform: ledc
      id: out_display_4_blue
      pin: GPIO18
  
  number:
    - platform: template
      name: "Display 1"
      id: display_1
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_1
            level: !lambda return x;
    - platform: template
      name: "Display 2"
      id: display_2
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_2
            level: !lambda return x;
    - platform: template
      name: "Display 3"
      id: display_3
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_3
            level: !lambda return x;
    - platform: template
      name: "Display 4"
      id: display_4
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_4
            level: !lambda return x;
  
  light:
    - platform: esp32_rmt_led_strip
      id: strip_gpio13
      pin: GPIO13
      num_leds: 3
      chipset: ws2812
      rgb_order: GRB
      internal: true
    - platform: partition
      name: "Display 1 LED"
      id: led_display_1
      segments:
        - id: strip_gpio13
          from: 0
          to: 0
    - platform: partition
      name: "Display 2 LED"
      id: led_display_2
      segments:
        - id: strip_gpio13
          from: 1
          to: 1
    - platform: partition
      name: "Display 3 LED"
      id: led_display_3
      segments:
        - id: strip_gpio13
          from: 2
          to: 2
    - platform: rgb
      name: "Display 4 LED"
      id: led_display_4
      red: out_display_4_red
      green: out_display_4_green
      blue: out_display_4_blue
  
  '''
# ---
# name: test_generated_yaml_matches_snapshot[shared_addressable_pin]
  '''
  # Generated by the Analog Displays integration for Home Assistant.
  #
  # This firmware exposes generic entities only. Which sensor feeds which meter,
  # how it is calibrated, and what the buttons do all live in Home Assistant and
  # can be changed there without reflashing.
  
  esphome:
    name: meter-panel
    friendly_name: Meter Panel
  
  esp32:
    board: esp32dev
    framework:
      type: esp-idf
  
  logger:
  
  api:
    encryption:
      key: !secret analog_displays_api_key
  
  ota:
    - platform: esphome
      password: !secret analog_displays_ota_password
  
  wifi:
    ssid: !secret wifi_ssid
    password: !secret wifi_password
    ap:
      ssid: "Meter Panel Fallback"
  
  captive_portal:
  
  output:
    - platform: ledc
      id: out_display_1
      pin: GPIO25
      frequency: 1000Hz
    - platform: ledc
      id: out_display_2
      pin: GPIO26
      frequency: 1000Hz
    - platform: ledc
      id: out_display_3
      pin: GPIO27
      frequency: 1000Hz
  
  number:
    - platform: template
      name: "Display 1"
      id: display_1
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_1
            level: !lambda return x;
    - platform: template
      name: "Display 2"
      id: display_2
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_2
            level: !lambda return x;
    - platform: template
      name: "Display 3"
      id: display_3
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_3
            level: !lambda return x;
  
  light:
    - platform: esp32_rmt_led_strip
      id: strip_gpio13
      pin: GPIO13
      num_leds: 3
      chipset: ws2812
      rgb_order: GRB
      internal: true
    - platform: partition
      name: "Display 1 LED"
      id: led_display_1
      segments:
        - id: strip_gpio13
          from: 0
          to: 0
    - platform: partition
      name: "Display 2 LED"
      id: led_display_2
      segments:
        - id: strip_gpio13
          from: 1
          to: 1
    - platform: partition
      name: "Display 3 LED"
      id: led_display_3
      segments:
        - id: strip_gpio13
          from: 2
          to: 2
  
  '''
# ---
# name: test_generated_yaml_matches_snapshot[single_display]
  '''
  # Generated by the Analog Displays integration for Home Assistant.
  #
  # This firmware exposes generic entities only. Which sensor feeds which meter,
  # how it is calibrated, and what the buttons do all live in Home Assistant and
  # can be changed there without reflashing.
  
  esphome:
    name: single-meter
    friendly_name: Single Meter
  
  esp32:
    board: esp32dev
    framework:
      type: esp-idf
  
  logger:
  
  api:
    encryption:
      key: !secret analog_displays_api_key
  
  ota:
    - platform: esphome
      password: !secret analog_displays_ota_password
  
  wifi:
    ssid: !secret wifi_ssid
    password: !secret wifi_password
    ap:
      ssid: "Single Meter Fallback"
  
  captive_portal:
  
  output:
    - platform: ledc
      id: out_power
      pin: GPIO25
      frequency: 1000Hz
  
  number:
    - platform: template
      name: "Power"
      id: power
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_power
            level: !lambda return x;
  
  '''
# ---
# name: test_generated_yaml_matches_snapshot[with_buttons]
  '''
  # Generated by the Analog Displays integration for Home Assistant.
  #
  # This firmware exposes generic entities only. Which sensor feeds which meter,
  # how it is calibrated, and what the buttons do all live in Home Assistant and
  # can be changed there without reflashing.
  
  esphome:
    name: meter-panel
    friendly_name: Meter Panel
  
  esp32:
    board: esp32dev
    framework:
      type: esp-idf
  
  logger:
  
  api:
    encryption:
      key: !secret analog_displays_api_key
  
  ota:
    - platform: esphome
      password: !secret analog_displays_ota_password
  
  wifi:
    ssid: !secret wifi_ssid
    password: !secret wifi_password
    ap:
      ssid: "Meter Panel Fallback"
  
  captive_portal:
  
  output:
    - platform: ledc
      id: out_display_1
      pin: GPIO25
      frequency: 1000Hz
  
  number:
    - platform: template
      name: "Display 1"
      id: display_1
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_1
            level: !lambda return x;
  
  binary_sensor:
    - platform: gpio
      name: "Cycle"
      id: cycle
      pin:
        number: GPIO4
        mode:
          input: true
          pullup: true
        inverted: true
      on_multi_click:
        - timing:
            - ON for at most 0.4s
            - OFF for at least 0.35s
          then:
            - event.trigger:
                id: cycle_event
                event_type: single
        - timing:
            - ON for at most 0.4s
            - OFF for at most 0.3s
            - ON for at most 0.4s
            - OFF for at least 0.35s
          then:
            - event.trigger:
                id: cycle_event
                event_type: double
        - timing:
            - ON for at least 0.8s
          then:
            - event.trigger:
                id: cycle_event
                event_type: long
    - platform: gpio
      name: "Toggle"
      id: toggle
      pin:
        number: GPIO5
        mode:
          input: true
          pullup: true
        inverted: true
  
  event:
    - platform: template
      name: "Cycle clicks"
      id: cycle_event
      event_types:
        - single
        - double
        - long
  
  '''
# ---
# name: test_generated_yaml_matches_snapshot[without_buttons]
  '''
  # Generated by the Analog Displays integration for Home Assistant.
  #
  # This firmware exposes generic entities only. Which sensor feeds which meter,
  # how it is calibrated, and what the buttons do all live in Home Assistant and
  # can be changed there without reflashing.
  
  esphome:
    name: meter-panel
    friendly_name: Meter Panel
  
  esp32:
    board: esp32dev
    framework:
      type: esp-idf
  
  logger:
  
  api:
    encryption:
      key: !secret analog_displays_api_key
  
  ota:
    - platform: esphome
      password: !secret analog_displays_ota_password
  
  wifi:
    ssid: !secret wifi_ssid
    password: !secret wifi_password
    ap:
      ssid: "Meter Panel Fallback"
  
  captive_portal:
  
  output:
    - platform: ledc
      id: out_display_1
      pin: GPIO25
      frequency: 1000Hz
  
  number:
    - platform: template
      name: "Display 1"
      id: display_1
      min_value: 0
      max_value: 1
      step: 0.001
      optimistic: true
      set_action:
        - output.set_level:
            id: out_display_1
            level: !lambda return x;
  
  '''
# ---
